# SliceForge

./: .gitignore  CMakeLists.txt  README.md  run_tests  sliceforge
samples/: pyramid.stl
src/: main_cli.cpp
src/core/: Mesh.h  OBJParser.h  ProfileSerializer.h  STLParser.h  Slicer.h  SlicingPipeline.h
src/ui/: Main.qml  main.cpp
tests/: test_all.cpp
